# componentsdb

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  COPYING.txt  README.md  alembic.ini  devsettings.py  docker-compose.yaml  manage.py  requirements.txt  schema.gql  setup.py  taskfile.yaml  tox.ini
.github/workflows/: test.yaml
alembic/: alembic.ini  env.py
alembic/versions/: 49e677d8cab_create_initial_schema.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 00aaee2ef63c_add_user_and_auth_related_models.py  1284b62596a3_add_federated_credentials_uses_table.py  132e6f3101a0_enable_trigram_extension.py  2730d92f2c4d_add_refresh_token_and_expires_at_index_.py  3c6509c01c97_add_uuid_to_roles_and_permissions.py  4948453f7433_add_additional_indexes.py  62a019f1c202_add_search_text_column_to_components.py  660d48ec93c5_create_updated_at_triggers.py  8f521600c8ec_add_role_binding_table_timestamp_.py  9519290d3c95_add_role_binding_tables.py  99a341f6afb5_add_roles_and_permissions_models.py  9cce51e5ac43_create_initial_tables_and_indexes.py  bd992e5825fe_add_roles_binding_timestamp_triggers.py  d3cab78139a6_add_roles_and_permissions.py  ebb6ad8c9c40_add_collections.py
backend/componentsdb/: app.py  auth.py  cli.py  logging.py  models.py
backend/componentsdb/api/: app.py  db.py  models.py
backend/componentsdb/authentication/: exceptions.py  oidc.py  policies.py  validate.py
backend/componentsdb/authentication/transport/: requests.py
backend/componentsdb/cli/: __init__.py  _db.py  fakes.py  import_.py  server.py  users.py
backend/componentsdb/db/: fakes.py  models.py
backend/componentsdb/fastapi/: app.py  auth.py  db.py  graphql.py  healthcheck.py  settings.py
backend/componentsdb/federatedidentity/: __init__.py  exceptions.py  oidc.py  policies.py  validate.py
backend/componentsdb/federatedidentity/transport/: requests.py
backend/componentsdb/graphql/: __init__.py  authtypes.py  connectionloaders.py  context.py  db.py  genericloaders.py  loaders.py  pagination.py  paginationtypes.py  queries.py  rbactypes.py  schema.py  types.py
backend/docs/: componentsdb.auth.rst  conf.py  index.rst  reference.rst
backend/tests/: asserts.py  authfixtures.py  conftest.py  dbfixtures.py  test_db.py  test_placeholder.py
backend/tests/api/: conftest.py  test_db.py
backend/tests/auth/: test_access_token.py  test_federated_credentials.py  test_refresh_token.py  test_tokens.py
backend/tests/authentication/: jose.py  oidc.py  test_jose.py  test_jwks_fetching.py  test_oidc.py  test_validation.py
backend/tests/db/: test_db.py  test_db_schema.py  test_fakes.py
backend/tests/fastapi/: conftest.py  test_auth.py  test_healthcheck.py
backend/tests/federatedidentity/: conftest.py  oidc.py  test_jwks_fetching.py  test_oidc.py  test_validation.py
backend/tests/graphql/: conftest.py  test_auth.py  test_component_search.py  test_query_cabinets.py  test_query_rbac.py
componentsdb/: _mixin.py  api.py  app.py  auth.py  default_settings.py  exception.py  model.py  query.py  ui.py
componentsdb/ui/static/: signin.js
componentsdb/ui/templates/: collection.html  index.html  (+3 more)
compose/traefik-config/: dev.yaml  prod.yaml
frontend/: .env.development  .gitignore  Dockerfile  README.md  astro.config.mjs  codegen.ts  package.json  schema.gql  tsconfig.json
frontend/docker/: nginx.conf
frontend/public/: index.html
frontend/src/: App.tsx  apolloClient.ts  config.ts  index.css  index.tsx  router.tsx
openapi/: spec.yaml
tests/: conftest.py  requirements.txt  settings.py  test_api.py  test_auth.py  test_collection.py  test_db_invariants.py  test_db_user_collection_perms.py  test_db_user_component_perms.py  test_encoded_key.py  test_jwt.py  test_ui.py  x509cert.py
(+41 files in other folders)
